# android-kotlin-bazel

./: .gitignore  MODULE.bazel  WORKSPACE
example/: BUILD
example/main/: AndroidManifest.xml
example/main/java/com/example/kotlinactivityapp/: LibraryManifest.xml  MainActivity.kt
